--- a/index.html
+++ b/index.html
@@ -160,9 +160,10 @@
                 <h3>Projekty</h3>
                 <div class="gallery projects">
                     <figure>
-                        <a href="https://mrsta.cf/uloha1/index.html" target="_blank"><img
+                        <a href="https://mrsta.cf/projekty/uloha1/index.html" target="_blank"><img
                                 src="img/simple-responsive-layout.PNG" alt="Simple Responsive Layout"></a>
-                        <figcaption><a href="https://mrsta.cf/uloha1/index.html" target="_blank">Simple Responsive
+                        <figcaption><a href="https://mrsta.cf/projekty/uloha1/index.html" target="_blank">Simple
+                                Responsive
                                 Layout</a>
                         </figcaption>
                     </figure>
