--- a/index.html
+++ b/index.html
@@ -141,6 +141,9 @@
                         </figcaption>
                     </figure>
                 </div>
+                <h3>Ostatní</h3>
+                <p>V dosavadním zaměstnání jsem pracoval se scripty v databázi <strong>Sybase ASE</strong>. Ze střední
+                    školy mám potom základy jazyků <strong>Java</strong> a <strong>PHP</strong>.</p>
             </article>
             <hr>
             <article id="praxe">
